<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:text="Edit your profile to load with the app.  Pressing ''OK'' will restart the app with your saved configuration."/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/gender_label"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/profile_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/profile_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_label" />

            <RadioButton
                android:id="@+id/profile_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_label" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/age_spinner_label"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/profileSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@layout/layout_spinnerbg"
            android:paddingEnd="24dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>

</LinearLayout>