<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:contentDescription=".pftfrag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/gender_label"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radio_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male_label" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female_label" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/age_spinner_label"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/age_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@layout/layout_spinnerbg"
                    android:paddingEnd="24dp"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/pushpull_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@layout/layout_spinnerbg"
                    android:paddingEnd="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/pullups_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number"
                    android:nextFocusDown="@+id/crunches_text_input" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/crunchplank_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@layout/layout_spinnerbg"
                    android:paddingEnd="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@id/crunches_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number"
                    android:nextFocusDown="@+id/runtime_minutes_text_input" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:visibility = "gone"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:id="@+id/plank_colon"/>
                <EditText
                    android:id="@+id/plank_seconds"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:visibility= "gone"
                    android:ems="2"
                    android:inputType="number"
                    android:nextFocusDown="@id/runtime_minutes_text_input"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/runrow_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@layout/layout_spinnerbg"
                    android:paddingEnd="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": "
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@id/runtime_minutes_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number"
                    android:nextFocusDown="@+id/runtime_seconds_text_input" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@id/runtime_seconds_text_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/elevation_label"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/elevation_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black" />

            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:id="@+id/calculate_button"
                android:text="@string/calculate_button_text"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>