<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:id="@+id/cft_top_level"
            tools:contentDescription=".cft_top_level_fragment">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="top"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/gender_label"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/radio_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/male_label" />

                            <RadioButton
                                android:id="@+id/radio_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female_label" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/age_spinner_label"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <Spinner
                            android:id="@+id/age_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@layout/layout_spinnerbg"
                            android:paddingEnd="24dp"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="MTC: "
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/MTC_minutes_text_input"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:inputType="number"
                            android:nextFocusDown="@+id/MTC_seconds_text_input" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@id/MTC_seconds_text_input"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:inputType="number"
                            android:nextFocusDown="@+id/ACL_input"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="ACL: "
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@id/ACL_input"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:inputType="number"
                            android:nextFocusDown="@+id/MUF_minutes_text_input" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="MUF: "
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@id/MUF_minutes_text_input"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:inputType="number"
                            android:nextFocusDown="@+id/MUF_seconds_text_input" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@id/MUF_seconds_text_input"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:inputType="number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/elevation_label"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <CheckBox
                            android:id="@+id/elevation_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@android:color/black" />

                    </LinearLayout>


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:id="@+id/calculate_button"
                        android:text="@string/calculate_button_text"
                        android:textSize="16sp" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>