<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_bodyfatcalc_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bodyfatcalc_frag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:contentDescription=".bodyfatcalc_frag">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/gender_label"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/radio_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male_label" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female_label" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Height (inches): "
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/height_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="numberDecimal"
                        android:nextFocusDown="@+id/neck_input" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Neck: "
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/neck_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="numberDecimal"
                        android:nextFocusDown="@+id/abs_input" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/abs_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Abdomen: "
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@id/abs_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="numberDecimal"
                        android:nextFocusDown="@+id/weight_input" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hips_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Hips: "
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/hip_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="numberDecimal"
                        android:nextFocusDown="@id/weight_input" />

                </LinearLayout>

                <Button
                    android:id="@+id/calculate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:text="@string/calculate_button_text"
                    android:textSize="16sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>